2012-01-11  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* TcpConnection.cs:
	  Fixed the TcpConnection.InputStream's Read method to return
	  the right count on the end of the stream.

2011-12-31  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	* System.Runtime.Remoting.Channels.TwoWayTcp.csproj:
	  

	* TcpConnection.cs:
	* TcpServerSink.cs:
	* TcpClientSink.cs:
	* TcpInputStream.cs:
	* TcpServerChannel.cs:
	* TcpConnectionPool.cs:
	  TCP streams moved to TcpConnection as private classes.
	New TCP channel protocol introduced - the message data is now
	  divided into chunks for better streaming.
	Improved performance of both sending and recieving messages.

2011-12-30  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* TcpConnection.cs:
	  Just a code simplification...

2011-12-30  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* TcpConnection.cs:
	  Fixed possible deadlock.

2011-12-29  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* TcpInputStream.cs:
	  Changed the access modifier of TcpInputStream to 'internal'.

2011-12-29  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	* System.Runtime.Remoting.Channels.TwoWayTcp.csproj:
	  

	* TcpConnectionPool.cs:
	  Improved exception handling.

	* TcpConnection.cs:
	* TcpInputStream.cs:
	  Improved message recieving performance by letting sinks read
	  (almost) directly from the socket stream.

2011-12-29  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* TcpServerSink.cs:
	  Fixed a serious .NET Framework compatibility issue that
	  changed all remote exceptions to RemotingException.

	* TcpServerChannel.cs:
	  Improved exception handling.

	* TcpClientSink.cs:
	  Code formatting fix.

2011-10-28  WOnder93  <omosnacek@gmail.com>

	* System.Runtime.Remoting.Channels.TwoWayTcp.csproj:
	  Migrated to Mono/.NET 4.0
	Updated to comply with the new C# standard.

2011-09-16  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  
